css udemy exercises

--- a/HTML1/index.html
+++ b/HTML1/index.html
@@ -3,31 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Samanway Classes</title>
-<style media="screen">
-  body{
-    background-color:pink;
-  }
+    <link rel="stylesheet" href="css/styles.css"
 
-  hr{
-
-    background-color :white;
-    border-color :grey;
-    border-width: 10px;
-    border-style:dotted none none;
-    height: 0px;
-    width: 9%;
-  }
-
-  img{
-
-    height : 300px;
-  }
-</style>
 
   </head>
   <body>
     <hr>
-    <h3>Work Experience : </h3>
+    <h3{color:red};>Work Experience : </h3>
     <hr>
     <table cellspacing='10'>
       <tr>
